<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/s_spacing"
              android:layout_height="match_parent"
             tools:context="simone.bonvicini.travalert.travalert.ui.fragments.AlarmAreaFragment">

    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_alarm"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/m_spacing"
        android:id="@+id/alarm_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hours"
            android:text="12"
            android:textColor="@color/colorPrimary"
            android:textSize="62sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=":"
            android:textColor="@color/textColor"
            android:textSize="52sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/minutes"
            android:textColor="@color/colorPrimary"
            android:textSize="52sp"
            android:text="12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/am_pm"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="36sp"
            android:text="AM"
            android:layout_marginLeft="@dimen/xs_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/m_spacing"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/back"
            android:id="@+id/back"
            style="?attr/borderlessButtonStyle"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <Button
            android:text="@string/next"
            android:id="@+id/next"
            style="?attr/borderlessButtonStyle"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>
